# ref_design_docs

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
docs/: CONTRIBUTING.md  _config.yml  _toc.yml  intro.md
docs/developer_guide/: developer_guide.md
docs/examples/: 01_run_reference_system.ipynb
docs/getting_started/: install.md  overview.md
docs/user_guide/: user_guide.md
examples/: 01_run_reference_system.ipynb  02_modify_reference_system.ipynb  greenheart_config_onshore_mn_updated.yaml
reference-systems/01-minnesota-steel/greenHEART/: 01-minnesota-steel.py
reference-systems/01-minnesota-steel/greenHEART/input-files/plant/: greenheart_config_onshore_mn.yaml  (+1 more)
reference-systems/02-texas-ammonia/greenHEART/: 02-texas-ammonia.py
reference-systems/03-gulf-of-mexico-hydrogen/greenHEART/: 03-gulf_of_mexico-hydrogen.py
reference-systems/03-gulf_of_mexico-hydrogen/greenHEART/: 03-gulf_of_mexico-hydrogen.py
reference-systems/04-new-york-bight-hydrogen/greenHEART/: 04-new-york-bight-hydrogen.py
reference-systems/04-new_york-hydrogen/greenHEART/: 04-new_york-hydrogen.py
reference-systems/05-california-hydrogen/greenHEART/: 05-california-hydrogen.py
reference_systems/01-minnesota-steel/greenHEART/: 01-minnesota-steel.py
reference_systems/03-gulf-of-mexico-hydrogen/greenHEART/: 03-gulf_of_mexico-hydrogen.py
reference_systems/04-new-york-bight-hydrogen/greenHEART/: 04-new-york-bight-hydrogen.py
reference_systems/05-california-hydrogen/greenHEART/: 05-california-hydrogen.py
tools/: generate_plots.py  generate_tables.py
(+38 files in other folders)
